add all required files

--- a/project.html
+++ b/project.html
@@ -20,9 +20,9 @@
        <div id="MY PROJECTS">
            <h2>MY PROJECTS</h2>
         <ul>
-           <li>hello-world practise</li>
-           <li>my-first-webpage practise</li>
-           <li>html-practise</li>
+           <li>hello-world <a href="stephenchelimo.github.io/hello-world">practise</a></li>
+           <li>my-first-webpage <a href="stephenchelimo.github.io/my-first-webpage">practise</a></li>
+           <li>html <a href="stephenchelimo.github.io/html">practise</a></li>
         </ul>
        </div>
 
@@ -66,21 +66,15 @@
        </div>
         <div id="CONTACTS">
         <h2>CONTACTS</h2>
-        <a href="">
-            <img src="image/0.png" alt="gmail icon" height="10px" width="10px">
-        </a>
-        <a href="">  
-            <img src="gmail.jpeg" alt="gmail icon height=5px width=5px">
-        </a>
         <p>
          <ol>
-            <li>facebook</li>
-             <li>whatsapp </li>
-            <li>twitter</li>
-            <li>gmail</li>
+            <li>facebook steve848</li>
+             <li>whatsapp  0740388993</li>
+            <li>twitter steve848</li>
+            <li>gmail stephenchelimo057@gmail.com</li>
          </ol>
         </ol>
         </div>
-<footer>@copyright 2020</footer>
+<footer>&copy;copyright 2020</footer>
     </body>
 </html>
