--- a/project.html
+++ b/project.html
@@ -29,13 +29,13 @@
 
        <div id="ABOUT ME">
            <h2>ABOUT ME</h2>
-         <p>I'm Stephen Chelimo an aspiring software engineer
+         <p>I'm Stephen Chelimo and <strong> an aspiring software engineer</strong>
              currently a student at moringa school to pursue my
              dream.
          </p>
 
         <div id="MY BACKGROUND">
-            <h2>MY BACKGROUND</h2>
+            <h2><span style="color: blue;"></span> BACKGROUND</h2>
         <p>
             I come from from a small village in Baringo, I started my education in 2004 in the same village,
             It's untill 2013 when i get out of that village to join a highschool in the neighbour county, 
@@ -47,7 +47,7 @@
 
         <div id="INTEREST">
             <h2>INTEREST</h2>
-        <p>I'm interested in the following coding languages
+        <p>I'm <em>interested</em> in the following coding languages
          <ul>
            <li>HTML</li>
             <li>CSS</li>
